# bazel-golang-wasm-proto

./: .bazelrc  .gitignore  BUILD  BUILD.bazel  README.md  WORKSPACE  go.mod  main.go
protos/: BUILD.bazel
protos/api/: BUILD.bazel  README.md  api.pb.client.go  api.pb.go  api.pb.server.go  api.proto
server/: BUILD.bazel  server.go
tools/: BUILD.bazel
tools/protoc-gen-client/: BUILD.bazel  main.go
tools/protoc-gen-server/: BUILD.bazel  main.go
wasm/: BUILD.bazel  instance_table.go  main.go  manager.go  search_bar.go
