load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "instance_table.go",
        "main.go",
        "search_bar.go",
    ],
    importpath = "github.com/grahamjenson/bazel-golang-wasm-proto/wasm",
    visibility = ["//visibility:private"],
    deps = [
        "//protos/api:go_default_library",
        "@com_github_maxence_charriere_go_app_v6//pkg/app:go_default_library",
    ],
)

go_binary(
    name = "app.wasm",
    embed = [":go_default_library"],
    goarch = "wasm",
    goos = "js",
    visibility = ["//visibility:public"],
)
