load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/grahamjenson/bazel-golang-wasm-protoc/tools/protoc-gen-client",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_lyft_protoc_gen_star//:go_default_library",
        "@com_github_lyft_protoc_gen_star//lang/go:go_default_library",
    ],
)

go_binary(
    name = "protoc-gen-client",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
